--- a/src/Weather.css
+++ b/src/Weather.css
@@ -29,10 +29,14 @@
   font-weight: bold;
   color: rgb(33, 33, 33);
   font-size: 60px;
-  line-height: 60px;
-  margin-left: 5px;
+  line-height: 64px;
   font-weight: 400;
-  margin-left: 10px;
+}
+
+.Weather canvas {
+  margin: 10px auto;
+  display: inline-block;
+  line-height: 64px;
 }
 
 .Weather .unit {
